--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,7 +45,7 @@ a {
 .grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: auto;
+  grid-auto-rows: minmax(400px, auto);
   gap: 1rem;
 }
 
